# MyEngine

./: .gitignore  CMakeLists.txt  README.md
docs/: todolist.md
examples/: CMakeLists.txt
examples/model_viewer/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  main.cpp
include/gfx/camera/: Camera.h  OrbitController.h
include/gfx/core/: logging.h  types.h
include/gfx/hal/: Buffer.h  CommandBuffer.h  Device.h  Fence.h  Framebuffer.h  Instance.h  MemoryAllocator.h  Pipeline.h  RenderPass.h  Semaphore.h  Swapchain.h  Texture.h
include/gfx/hal/opengl/: GLBuffer.h  GLCommandBuffer.h  GLDevice.h  GLFence.h  GLFramebuffer.h  GLInstance.h  GLMemoryAllocator.h  GLPipeline.h  GLRenderPass.h  GLSemaphore.h  GLSwapchain.h  GLTexture.h
include/gfx/platform/: Window.h
include/gfx/rendergraph/: RenderGraph.h  RenderPass.h  Resource.h
include/gfx/scene/: Component.h  Entity.h  Mesh.h  MeshComponent.h  ModelLoader.h  Scene.h  Transform.h
include/gfx/shader/: Shader.h  ShaderCompiler.h
src/gfx/: CMakeLists.txt
src/gfx/camera/: Camera.cpp  OrbitController.cpp
src/gfx/core/: logging.cpp
src/gfx/hal/opengl/: GLBuffer.cpp  GLCommandBuffer.cpp  GLDevice.cpp  GLFence.cpp  GLFramebuffer.cpp  GLInstance.cpp  GLMemoryAllocator.cpp  GLPipeline.cpp  GLRenderPass.cpp  GLSemaphore.cpp  GLSwapchain.cpp  GLTexture.cpp
src/gfx/platform/: glfw_window.cpp
src/gfx/rendergraph/: RenderGraph.cpp  RenderPass.cpp  Resource.cpp
src/gfx/scene/: Entity.cpp  Mesh.cpp  MeshComponent.cpp  ModelLoader.cpp  Scene.cpp  Transform.cpp
src/gfx/shader/: Shader.cpp  ShaderCompiler.cpp
